// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for hasLikeButton: false, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: "9/16" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: clamp(4px, 0.25vw + 3px, 8px) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-2xl)) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 9/16;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
  padding: clamp(8px, 0.5vw + 6px, 16px);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  justify-content: space-between;
  align-items: flex-start;
}
.image {
  aspect-ratio: 8/9;
  margin: clamp(8px, 0.5vw + 6px, 16px) auto clamp(4px, 0.25vw + 3px, 8px);
  overflow: hidden;
  transition: transform var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
@media(min-width:760px) {
  .image {
    padding: 0 clamp(16px, 1.25vw + 12px, 36px);
  }
}

@media (forced-colors: active) {
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: clamp(4px, 0.25vw + 3px, 8px) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-2xl)) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
  padding: clamp(8px, 0.5vw + 6px, 16px);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: clamp(8px, 0.5vw + 6px, 16px) auto clamp(4px, 0.25vw + 3px, 8px);
  overflow: hidden;
  transition: transform var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
@media(min-width:760px) {
  .image {
    padding: 0 clamp(16px, 1.25vw + 12px, 36px);
  }
}

@media (forced-colors: active) {
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: "3/4" 2`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: clamp(4px, 0.25vw + 3px, 8px) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-2xl)) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
  padding: clamp(8px, 0.5vw + 6px, 16px);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: clamp(8px, 0.5vw + 6px, 16px) auto clamp(4px, 0.25vw + 3px, 8px);
  overflow: hidden;
  transition: transform var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
@media(min-width:760px) {
  .image {
    padding: 0 clamp(16px, 1.25vw + 12px, 36px);
  }
}

@media (forced-colors: active) {
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: {"base":"3/4","xs":"9/16"} 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: clamp(4px, 0.25vw + 3px, 8px) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-2xl)) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
  padding: clamp(8px, 0.5vw + 6px, 16px);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: clamp(8px, 0.5vw + 6px, 16px) auto clamp(4px, 0.25vw + 3px, 8px);
  overflow: hidden;
  transition: transform var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
@media(min-width:480px) {
  .root {
    aspect-ratio: 9/16;
  }
}

@media(min-width:760px) {
  .image {
    padding: 0 clamp(16px, 1.25vw + 12px, 36px);
  }
}

@media (forced-colors: active) {
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: true, hasPriceOriginal: false, hasDescription: false, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted(a[slot='anchor']) {
  position: absolute !important;
  inset: 0 !important;
  z-index: 1 !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl)) !important;
  text-indent: -999999px !important;
}
::slotted(a[slot='anchor']:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: clamp(4px, 0.25vw + 3px, 8px) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-2xl)) !important;
  overflow: hidden !important;
}
@media (forced-colors: active) {
  ::slotted(a[slot='anchor']:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
  padding: clamp(8px, 0.5vw + 6px, 16px);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.header {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: clamp(8px, 0.5vw + 6px, 16px) auto clamp(4px, 0.25vw + 3px, 8px);
  overflow: hidden;
  transition: transform var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
@media(min-width:760px) {
  .image {
    padding: 0 clamp(16px, 1.25vw + 12px, 36px);
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: true, hasPriceOriginal: true, hasDescription: false, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted(a[slot='anchor']) {
  position: absolute !important;
  inset: 0 !important;
  z-index: 1 !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl)) !important;
  text-indent: -999999px !important;
}
::slotted(a[slot='anchor']:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: clamp(4px, 0.25vw + 3px, 8px) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-2xl)) !important;
  overflow: hidden !important;
}
s {
  color: var(--p-color-contrast-medium);
}
@media (forced-colors: active) {
  ::slotted(a[slot='anchor']:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
  padding: clamp(8px, 0.5vw + 6px, 16px);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.header {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: clamp(8px, 0.5vw + 6px, 16px) auto clamp(4px, 0.25vw + 3px, 8px);
  overflow: hidden;
  transition: transform var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: clamp(4px, 0.25vw + 3px, 8px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:760px) {
  .image {
    padding: 0 clamp(16px, 1.25vw + 12px, 36px);
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: true, hasPriceOriginal: true, hasDescription: true, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted(a[slot='anchor']) {
  position: absolute !important;
  inset: 0 !important;
  z-index: 1 !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl)) !important;
  text-indent: -999999px !important;
}
::slotted(a[slot='anchor']:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: clamp(4px, 0.25vw + 3px, 8px) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-2xl)) !important;
  overflow: hidden !important;
}
s {
  color: var(--p-color-contrast-medium);
}
@media (forced-colors: active) {
  ::slotted(a[slot='anchor']:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-4xl));
  padding: clamp(8px, 0.5vw + 6px, 16px);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.header {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: clamp(8px, 0.5vw + 6px, 16px) auto clamp(4px, 0.25vw + 3px, 8px);
  overflow: hidden;
  transition: transform var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: clamp(4px, 0.25vw + 3px, 8px);
}
.description {
  margin: 0;
  font: normal normal 400 .75rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  color: var(--p-color-contrast-high);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:760px) {
  .image {
    padding: 0 clamp(16px, 1.25vw + 12px, 36px);
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;
